--- a/SwiftMusic/Base.lproj/Main.storyboard
+++ b/SwiftMusic/Base.lproj/Main.storyboard
@@ -1,26 +1,153 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16B2657" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="OVV-S2-b9J">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Navigation Controller-->
+        <scene sceneID="iuC-AS-0gG">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <navigationController id="OVV-S2-b9J" sceneMemberID="viewController">
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="gXU-oG-vO7">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="OzQ-mY-bYs" kind="relationship" relationship="rootViewController" id="Qmd-Zz-6dN"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WMl-5Z-ibB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-356" y="68"/>
+        </scene>
+        <!--Swift Music-->
+        <scene sceneID="j4O-ZF-FEM">
+            <objects>
+                <viewController id="OzQ-mY-bYs" customClass="TrackListController" customModule="SwiftMusic" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="WLd-Zu-zZI"/>
+                        <viewControllerLayoutGuide type="bottom" id="BaL-dG-JWL"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="3zu-Xm-g5H">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="p07-hg-obm">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9G9-EF-rqL">
+                                <rect key="frame" x="0.0" y="64" width="375" height="559"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TrackCell" rowHeight="88" id="ARm-kB-pcd" customClass="TracksListCell" customModule="SwiftMusic" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="88"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ARm-kB-pcd" id="z7q-il-Qp8">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="87"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4yY-7S-4YW">
+                                                    <rect key="frame" x="8" y="9" width="110" height="70"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Song Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xje-jX-9Mm">
+                                                    <rect key="frame" x="132" y="20" width="180" height="30"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="18"/>
+                                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Artist" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q7d-xy-XE0">
+                                                    <rect key="frame" x="132" y="47" width="180" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
+                                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.1175440177" green="0.11671449239999999" blue="0.1412996352" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <connections>
+                                            <outlet property="artist" destination="Q7d-xy-XE0" id="Y4O-qS-Ads"/>
+                                            <outlet property="trackImage" destination="4yY-7S-4YW" id="XWg-Lh-Jeh"/>
+                                            <outlet property="trackTitle" destination="xje-jX-9Mm" id="awg-Mh-Cjn"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="OzQ-mY-bYs" id="1HP-nL-PVg"/>
+                                    <outlet property="delegate" destination="OzQ-mY-bYs" id="5zY-GW-oO2"/>
+                                </connections>
+                            </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WRD-Hc-dDU">
+                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="NowPlayingBars" translatesAutoresizingMaskIntoConstraints="NO" id="Zga-KT-Yyc">
+                                        <rect key="frame" x="1" y="2" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="bdx-Ny-Qwd"/>
+                                            <constraint firstAttribute="width" constant="40" id="rtC-7g-A2E"/>
+                                        </constraints>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="tailTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bkg-4I-doA">
+                                        <rect key="frame" x="39" y="8" width="328" height="32"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="32" id="Lsx-LY-SyS"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <state key="normal" title="Choose a song to begin">
+                                            <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="bkg-4I-doA" firstAttribute="leading" secondItem="WRD-Hc-dDU" secondAttribute="leading" constant="39" id="0y3-w6-58X"/>
+                                    <constraint firstAttribute="height" constant="44" id="7lt-Ym-6ge"/>
+                                    <constraint firstItem="Zga-KT-Yyc" firstAttribute="top" secondItem="WRD-Hc-dDU" secondAttribute="top" constant="2" id="Qwf-db-zPE"/>
+                                    <constraint firstAttribute="trailing" secondItem="bkg-4I-doA" secondAttribute="trailing" constant="8" id="Ush-5d-lco"/>
+                                    <constraint firstItem="Zga-KT-Yyc" firstAttribute="leading" secondItem="WRD-Hc-dDU" secondAttribute="leading" constant="1" id="cdY-zl-SQx"/>
+                                    <constraint firstItem="bkg-4I-doA" firstAttribute="top" secondItem="WRD-Hc-dDU" secondAttribute="top" constant="8" id="vud-32-amD"/>
+                                    <constraint firstAttribute="bottom" secondItem="bkg-4I-doA" secondAttribute="bottom" constant="4" id="xva-Ln-kVb"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="p07-hg-obm" secondAttribute="trailing" id="0nG-22-jsm"/>
+                            <constraint firstItem="p07-hg-obm" firstAttribute="top" secondItem="3zu-Xm-g5H" secondAttribute="top" id="BXq-mw-Lwt"/>
+                            <constraint firstItem="p07-hg-obm" firstAttribute="leading" secondItem="3zu-Xm-g5H" secondAttribute="leading" id="HQr-po-xcF"/>
+                            <constraint firstAttribute="trailing" secondItem="WRD-Hc-dDU" secondAttribute="trailing" id="Lts-lB-Ke1"/>
+                            <constraint firstItem="BaL-dG-JWL" firstAttribute="top" secondItem="WRD-Hc-dDU" secondAttribute="bottom" id="M05-iI-74a"/>
+                            <constraint firstItem="9G9-EF-rqL" firstAttribute="top" secondItem="WLd-Zu-zZI" secondAttribute="bottom" id="PTn-zd-69N"/>
+                            <constraint firstItem="BaL-dG-JWL" firstAttribute="top" secondItem="p07-hg-obm" secondAttribute="bottom" id="bbs-V0-xYo"/>
+                            <constraint firstItem="9G9-EF-rqL" firstAttribute="leading" secondItem="3zu-Xm-g5H" secondAttribute="leading" id="f0A-4z-qgX"/>
+                            <constraint firstAttribute="trailing" secondItem="9G9-EF-rqL" secondAttribute="trailing" id="owS-72-a8l"/>
+                            <constraint firstItem="WRD-Hc-dDU" firstAttribute="top" secondItem="9G9-EF-rqL" secondAttribute="bottom" id="poF-54-cFo"/>
+                            <constraint firstItem="WRD-Hc-dDU" firstAttribute="leading" secondItem="3zu-Xm-g5H" secondAttribute="leading" id="sYM-HI-TT5"/>
+                            <constraint firstItem="WRD-Hc-dDU" firstAttribute="top" secondItem="9G9-EF-rqL" secondAttribute="bottom" id="yi8-YM-X1s"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Swift Music" id="dvi-Ap-GqB"/>
+                    <connections>
+                        <outlet property="tableView" destination="9G9-EF-rqL" id="aWh-D5-6Bm"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MmZ-FS-5R7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="495.19999999999999" y="67.916041979010501"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="NowPlayingBars" width="19" height="19"/>
+        <image name="background" width="320" height="568"/>
+    </resources>
 </document>
